<resources>
    <string name="app_name">SQLiteRecycler</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="userName">UserName</string>
    <string name="id">ID</string>
    <string name="rId">ID: </string>
    <string name="rUName">UserName: </string>
    <string name="rEmail">Email: </string>
    <string name="rPhone">Phone: </string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="idUpdate">Enter the ID to be updated…</string>
    <string name="uNameUpdate">Enter new UserName…</string>
    <string name="emailUpdate">Enter new Email address…</string>
    <string name="phoneUpdate">Enter new Phone number…</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="idToDel">Enter an ID to delete…</string>
    <string name="ViewData">View Data</string>
    <string name="MainMenu">Main Menu</string>
    <string name="updateText">Enter data to update</string>
    <string name="deleteText">Enter an ID to delete</string>
    <string name="viewData">View Data</string>
</resources>
