<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateText"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/tvTitle"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="@string/idUpdate"
        android:inputType="number"
        android:layout_below="@+id/tvTitle"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="@string/uNameUpdate"
        android:inputType="textPersonName"
        android:layout_below="@+id/etId"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="@string/emailUpdate"
        android:layout_below="@id/etName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhone"
        android:inputType="number"
        android:maxLength="10"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:hint="@string/phoneUpdate"
        android:layout_below="@id/etEmail"/>

    <Button
        android:id="@+id/btnView"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/ViewData" />

    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnView"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/update" />

</RelativeLayout>